tests/expectations/parser/program/pipe_eof.out
Error [EPAR0370005]: expected : -- found '='
    --> test:4:15
     |
   4 |         let x = 1u8;
     |               ^
